# fastapi-sqlmodel-jwt-template

./: .gitignore  LICENSE  README.md  pyproject.toml
fastapi_jwt_template/: config.py  main.py  settings.toml
fastapi_jwt_template/auth/: auth_handler.py
fastapi_jwt_template/database/: database.py
fastapi_jwt_template/models/: models.py
tests/: test_fastapi_jwt_template.py
